# wakecycle

./: .gitignore  AGENTS.md  DEVELOPMENT_CONTEXT.md  README.md  SDLC.md  TOOLKIT.md  package.json  pyproject.toml
.github/workflows/: ci.yml
arunner/: __init__.py  __main__.py  cli.py
arunner/engine/: heartbeat.py  tick.py
arunner/tui/: app.py
docs/: ACCEPTANCE_TESTS.md  PLANNED_run_robustness.md  REQUIREMENTS.md  TRACEABILITY.md  VALIDATION.md
docs/archive/: PLANNED_FR73_run_observability.md  PLANNED_FR75_supervised_subagent_model.md
examples/: agent_review.jobs.json  canonical_plan.json  mixed.jobs.json  shell_jobs.jobs.json  toolkit_walkthrough.jobs.json  wrap_vs_tail.jobs.json
npm-bin/: arunner.js
references/: BOOTSTRAP_PROMPT.md  STATE_MACHINE.md
references/examples/: small_plan.json
reviews/001_self_council/: panelist_A_thesis_fidelity.md  panelist_B_schema_contract.md  panelist_C_internal_consistency.md  synthesis.md
reviews/003_self_council/: panelist_A_correctness.md  panelist_B_regression_safety.md  panelist_C_test_sufficiency.md  synthesis.md
reviews/030_self_council/: panelist_A_selection.md  panelist_B_engine_fit.md  panelist_C_honesty.md  synthesis.md
reviews/038_self_council/: panelist_A_adapter_correctness.md  panelist_B_security_check.md  panelist_C_honesty_regression.md  synthesis.md
reviews/041_self_council/: panelist_A_checker_parity.md  panelist_B_in_agent_fidelity.md  panelist_C_honesty_regression.md  synthesis.md
reviews/046_self_council/: panelist_A_enqueue_correctness.md  panelist_B_cadence_correctness.md  panelist_C_honesty_regression.md  synthesis.md
reviews/047_self_council/: panelist_A_read_only_safety.md  panelist_B_renderer_reuse_freshness.md  synthesis.md  (+1 more)
schemas/: heartbeat.schema.json  job_manifest.schema.json  plan.schema.json  result.schema.json
tests/: test_acceptance_checker.py  test_acceptance_uc15.py  test_acceptance_uc89101112.py  test_activity_cadence.py  test_activity_patterns.py  test_checker_independence.py  test_cli.py  test_cli_journey.py  test_continuation.py  test_control_files.py  test_gates.py  test_incontext.py  test_integration_scenarios.py  test_jobs_shorthand.py  test_live_enqueue.py  test_message_channel.py  test_monitor.py  test_multistep.py  test_poll_now.py  test_positioning_honesty.py  test_run_robustness.py  test_sim_worker_portable.py  test_subagent_liveness.py  test_summary.py  test_tail_adapter.py  test_tick.py  test_ticker.py  test_tokens.py  test_toolkit_examples.py  test_version_single_source.py
(+66 files in other folders)
