[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "arunner"
# FR-34 single source: the version is NOT written here. It is DERIVED from
# arunner/__init__.py:__version__ (the one canonical location) via the
# [tool.setuptools.dynamic] table below, so a bump touches exactly one file and
# wheel/sdist metadata can never drift from the package. Pinned by
# tests/test_version_single_source.py.
dynamic = ["version"]
description = "A batch orchestrator for AI coding agents that runs inside your existing agent session - no server, no daemon, no admin rights."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Andrew Stellman", email = "andrew@stellman.com" }]
keywords = ["agent", "orchestration", "ai", "harness", "batch", "claude"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
]

[project.optional-dependencies]
# FR-62: the interactive `arunner tui` is an OPTIONAL, decoupled viewer. The
# bare `arunner` install stays zero-dependency (NFR-3 -- engine is stdlib);
# Textual is pulled in only by `pip install arunner[tui]`, and imported lazily
# so the engine/ticker/monitor path never touches it. `arunner monitor` remains
# the always-available stdlib fallback.
tui = ["textual>=0.50"]

[project.urls]
Homepage = "https://github.com/andrewstellman/arunner"
Repository = "https://github.com/andrewstellman/arunner"

[project.scripts]
arunner = "arunner.cli:main"
arunner-ticker = "arunner.engine.ticker:main"
arunner-heartbeat = "arunner.engine.heartbeat:main"

[tool.setuptools]
# arunner.tui ships in the wheel (so `arunner[tui]` works once installed), but
# its only Textual import lives in arunner/tui/app.py, imported lazily by
# `cli.cmd_tui` -- the engine path (arunner.engine, monitor) imports none of it.
packages = ["arunner", "arunner.engine", "arunner.tui"]

[tool.setuptools.dynamic]
# FR-34: packaging metadata reads the single canonical source. setuptools imports
# nothing extra to read an attr literal -- it parses arunner/__init__.py for the
# assignment -- so this stays NFR-3-clean (no build-time runtime dependency).
version = { attr = "arunner.__version__" }
